# aasdk

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: build_compile.yml
aasdk_proto/: AVChannelMessageIdsEnum.proto  AVChannelSetupRequestMessage.proto  AVChannelSetupResponseMessage.proto  AVChannelSetupStatusEnum.proto  AVChannelStopIndicationMessage.proto  AVInputOpenRequestMessage.proto  AVInputOpenResponseMessage.proto  AVMediaAckIndicationMessage.proto  AVStreamTypeEnum.proto  AbsoluteInputEventData.proto  AbsoluteInputEventsData.proto  BindingRequestMessage.proto  BindingResponseMessage.proto  BluetoothChannelData.proto  BluetoothChannelMessageIdsEnum.proto  BluetoothPairingMethodEnum.proto  BluetoothPairingRequestMessage.proto  BluetoothPairingResponseMessage.proto  BluetoothPairingStatusEnum.proto  ButtonCodeEnum.proto  ButtonEventData.proto  ButtonEventsData.proto  CMakeLists.txt  ChannelDescriptorData.proto  InputEventIndicationMessage.proto  NavigationChannelData.proto  NavigationFocusRequestMessage.proto  NavigationFocusResponseMessage.proto  NavigationImageOptionsData.proto  RelativeInputEventData.proto  RelativeInputEventsData.proto  SensorStartRequestMessage.proto  SensorStartResponseMessage.proto  ShutdownReasonEnum.proto  ShutdownRequestMessage.proto  ShutdownResponseMessage.proto  StatusEnum.proto  TouchEventData.proto  TouchLocationData.proto  VideoFocusIndicationMessage.proto  (+6 more)
buildenv/: Dockerfile  entrypoint.sh  patch-libboost-log-deb.sh
cmake_modules/: Findlibusb-1.0.cmake  gitversion.cmake
include/aasdk/Channel/: Promise.hpp  ServiceChannel.hpp
include/aasdk/Channel/AV/: AVInputServiceChannel.hpp  AudioServiceChannel.hpp  IAVInputServiceChannel.hpp  IAVInputServiceChannelEventHandler.hpp  (+11 more)
include/aasdk/Common/: Data.hpp
include/aasdk/Error/: Error.hpp  ErrorCode.hpp
include/aasdk/IO/: Promise.hpp  PromiseLink.hpp
include/aasdk/Messenger/: ChannelId.hpp  ChannelReceiveMessageQueue.hpp  ChannelReceivePromiseQueue.hpp  Cryptor.hpp  EncryptionType.hpp  FrameHeader.hpp  FrameSize.hpp  FrameSizeType.hpp  FrameType.hpp  ICryptor.hpp  IMessageInStream.hpp  IMessageOutStream.hpp  IMessenger.hpp  Message.hpp  MessageId.hpp  MessageInStream.hpp  MessageOutStream.hpp  MessageType.hpp  Messenger.hpp  Promise.hpp  Timestamp.hpp
include/aasdk/TCP/: ITCPEndpoint.hpp  ITCPWrapper.hpp  TCPEndpoint.hpp  TCPWrapper.hpp
include/aasdk/Transport/: DataSink.hpp  ISSLWrapper.hpp  ITransport.hpp  SSLWrapper.hpp  TCPTransport.hpp  Transport.hpp  USBTransport.hpp
include/aasdk/USB/: AOAPDevice.hpp  AccessoryModeProtocolVersionQuery.hpp  AccessoryModeQuery.hpp  AccessoryModeQueryChain.hpp  AccessoryModeQueryChainFactory.hpp  AccessoryModeQueryFactory.hpp  AccessoryModeQueryType.hpp  AccessoryModeSendStringQuery.hpp  AccessoryModeSendStringType.hpp  AccessoryModeStartQuery.hpp  ConnectedAccessoriesEnumerator.hpp  IAOAPDevice.hpp  IAccessoryModeQuery.hpp  IAccessoryModeQueryChain.hpp  IAccessoryModeQueryChainFactory.hpp  IAccessoryModeQueryFactory.hpp  IConnectedAccessoriesEnumerator.hpp  IUSBEndpoint.hpp  IUSBHub.hpp  IUSBWrapper.hpp  USBEndpoint.hpp  USBHub.hpp  USBWrapper.hpp
src/Channel/: ServiceChannel.cpp
src/Channel/AV/: AVInputServiceChannel.cpp  AudioServiceChannel.cpp  MediaAudioServiceChannel.cpp  MediaStatusServiceChannel.cpp  SpeechAudioServiceChannel.cpp  SystemAudioServiceChannel.cpp  VideoServiceChannel.cpp
src/Channel/Bluetooth/: BluetoothServiceChannel.cpp
src/Channel/Control/: ControlServiceChannel.cpp
src/Channel/Input/: InputServiceChannel.cpp
src/Channel/Navigation/: NavigationStatusServiceChannel.cpp
src/Channel/Sensor/: SensorServiceChannel.cpp
src/Common/: Data.cpp
src/Error/: Error.cpp
src/IO/: IOContextWrapper.cpp
src/Messenger/: ChannelId.cpp  ChannelReceiveMessageQueue.cpp  ChannelReceivePromiseQueue.cpp  Cryptor.cpp  FrameHeader.cpp  FrameSize.cpp  FrameType.cpp  Message.cpp  MessageId.cpp  MessageInStream.cpp  MessageInStream.ut.cpp  MessageOutStream.cpp  MessageOutStream.ut.cpp  Messenger.cpp  Messenger.ut.cpp  Timestamp.cpp
src/TCP/: TCPEndpoint.cpp  TCPEndpoint.ut.cpp  TCPWrapper.cpp
src/Transport/: DataSink.cpp  SSLWrapper.cpp  TCPTransport.cpp  TCPTransport.ut.cpp  Transport.cpp  USBTransport.cpp  USBTransport.ut.cpp
src/USB/: AOAPDevice.cpp  AOAPDevice.ut.cpp  AccessoryModeProtocolVersionQuery.cpp  AccessoryModeProtocolVersionQuery.ut.cpp  AccessoryModeQuery.cpp  AccessoryModeQueryChain.cpp  AccessoryModeQueryChain.ut.cpp  AccessoryModeQueryChainFactory.cpp  AccessoryModeQueryFactory.cpp  AccessoryModeSendStringQuery.cpp  AccessoryModeSendStringQuery.ut.cpp  AccessoryModeStartQuery.cpp  AccessoryModeStartQuery.ut.cpp  ConnectedAccessoriesEnumerator.cpp  ConnectedAccessoriesEnumerator.ut.cpp  USBEndpoint.cpp  USBEndpoint.ut.cpp  USBHub.cpp  USBHub.ut.cpp  USBWrapper.cpp
unit_test/Messenger/UT/: Cryptor.mock.hpp  MessageInStream.mock.hpp  MessageOutStream.mock.hpp  ReceivePromiseHandler.mock.hpp  SendPromiseHandler.mock.hpp
unit_test/TCP/UT/: TCPEndpoint.mock.hpp  TCPEndpointPromiseHandler.mock.hpp  TCPWrapper.mock.hpp
unit_test/Transport/UT/: Transport.mock.hpp  TransportReceivePromiseHandler.mock.hpp  TransportSendPromiseHandler.mock.hpp
unit_test/USB/UT/: AOAPDevice.mock.hpp  AccessoryModeQuery.mock.hpp  AccessoryModeQueryChain.mock.hpp  AccessoryModeQueryChainFactory.mock.hpp  AccessoryModeQueryChainPromiseHandler.mock.hpp  AccessoryModeQueryFactory.mock.hpp  AccessoryModeQueryPromiseHandler.mock.hpp  ConnectedAccessoriesEnumeratorPromiseHandler.mock.hpp  USBEndpoint.mock.hpp  USBEndpointPromiseHandler.mock.hpp  USBHub.mock.hpp  USBHubPromiseHandler.mock.hpp  USBWrapper.mock.hpp
(+23 files in other folders)
